change style website

--- a/index.html
+++ b/index.html
@@ -69,31 +69,31 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-5 left-panel">
-                        <h2 class="">PRACTICE <span>AREAS</span></h2>
+                        <h2 style="font-size:42px;">PRACTICE <span style="font-weight: 100;">AREAS</span></h2>
                     </div>
                     <div class="col-md-7 right-panel">
                         <div class="area">
-                            <h3 class>Corporate Law</h3>
+                            <h3 class="text-uppercase" class>Corporate Law</h3>
                             <p>We provide expert guidance on corporate governance, compliance, and transactions.</p>
                         </div>
                         <div class="area">
-                            <h3>Family Law</h3>
+                            <h3 class="text-uppercase">Family Law</h3>
                             <p>Helping clients navigate divorce, custody, and other family matters with care.</p>
                         </div>
                         <div class="area">
-                            <h3>Criminal Law</h3>
+                            <h3 class="text-uppercase">Criminal Law</h3>
                             <p>Defending rights with integrity and experience in criminal defense cases.</p>
                         </div>
                         <div class="area">
-                            <h3>Real Estate</h3>
+                            <h3 class="text-uppercase">Real Estate</h3>
                             <p>Assisting with property transactions, disputes, and development projects.</p>
                         </div>
                         <div class="area">
-                            <h3>Intellectual Property</h3>
+                            <h3 class="text-uppercase">Intellectual Property</h3>
                             <p>Protecting your creative and business assets through IP registration and enforcement.</p>
                         </div>
                         <div class="area">
-                            <h3>Employment Law</h3>
+                            <h3 class="text-uppercase">Employment Law</h3>
                             <p>Guidance on workplace disputes, contracts, and labor compliance.</p>
                         </div>
                     </div>
