--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </nav>
 
         <!-- Hero Section -->
-        <section class="hero-section" id="hero-section-area">
+        <section class="hero-section reveal" id="hero-section-area">
             <div class="container-fluid container-hero-section">
                 <div class="row">
                     <div class="col-md-5 p-5 text-content d-flex flex-column justify-content-center">
@@ -65,7 +65,7 @@
 
         <!-- practice areas-->
 
-        <section class="practice-areas" id="practice-area">
+        <section class="practice-areas reveal" id="practice-area">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-5 left-panel">
@@ -102,7 +102,7 @@
         </section>
 
         <!-- OUR VISION -->
-        <section class="our-vision-section" id="our-vision-area">
+        <section class="our-vision-section reveal" id="our-vision-area">
             <div class="container">
                 <h2 class="section-title">OUR VISION</h2>
                 <p>
@@ -122,7 +122,7 @@
         <section class="parallax-section"></section>
 
         <!-- OUR ATTORNEYS SECTION -->
-        <section class="our-attorneys-section" id="our-attorneys-area pb_section bg-light">
+        <section class="our-attorneys-section reveal" id="our-attorneys-area pb_section bg-light">
 <div class="container">
     <div class="row justify-content-md-center text-center mb-5">
         <div class="col-lg-7">
@@ -164,7 +164,7 @@
             </div>
         </section>
         <!-- contact form -->
-        <section class="contact-section" id="section-contact">
+        <section class="contact-section reveal" id="section-contact">
             <div class="contact-overlay"></div>
             <div class="container">
                 <div class="contact-left">
