--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
 
     <!-- OUR ATTORNEYS SECTION -->
     <section
-      class="our-attorneys-section"
-      id="our-attorneys-area pb_section bg-light"
+      class="our-attorneys-section pb_section bg-light"
+      id="our-attorneys-area"
     >
       <div class="container">
         <div class="row justify-content-md-center text-center mb-5">
