--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                 </div>
             </div>
         </section>
-        <script src="contact.js"></script>
+        <script src="assets/js/contact.js"></script>
         <!-- back to top button-->
         <div class="back-to-top text-uppercase">
             <a href="#top" id="back-To-Top-Btn">
