add button contact, add content

--- a/index.html
+++ b/index.html
@@ -180,38 +180,38 @@
             <div class="container">
                 <div class="row justify-content-md-center text-center mb-5">
                     <div class="col-lg-7 fade-in">
-                        <h2 class="section-title">OUR ATTORNEYS</h2>
+                        <h2 class="section-title">VĂN PHÒNG LUẬT SƯ C&M</h2>
+                        <p><strong>20 năm đồng hành cùng các doanh nghiệp và doanh nhân</strong></p>
                     </div>
                     <div class="team-container fade-in">
                         <div class="team-member">
-                            <img src="assets/images/human-1.avif" alt="Aiden Walters" />
-                            <h3>AIDEN WALTERS</h3>
-                            <p class="role">PARTNER</p>
-                            <hr />
+                            <img src="assets/images/balance.png" alt="blance" />
+                            <h3>20+</h3>
                             <p class="contact">
-                                Tel: 123-456-7890<br />
-                                info@mysite.com
+                                NĂM KINH NGHIỆM
                             </p>
                         </div>
                         <div class="team-member">
-                            <img src="assets/images/human-2.avif" alt="Julia Knoll" />
-                            <h3>JULIA KNOLL</h3>
-                            <p class="role">PARTNER</p>
-                            <hr />
+                            <img src="assets/images/law.png" alt="law" />
+                            <h3>15000</h3>
                             <p class="contact">
-                                Tel: 123-456-7890<br />
-                                info@mysite.com
+                                HỒ SƠ ĐÃ XỬ LÝ
                             </p>
                         </div>
                         <div class="team-member">
-                            <img src="assets/images/human-3.avif" alt="James Lopez" />
-                            <h3>JAMES LOPEZ</h3>
-                            <p class="role">PARTNER</p>
-                            <hr />
+                            <img src="assets/images/badge.png" alt="badge" />
+                            <h3>50</h3>
                             <p class="contact">
-                                Tel: 123-456-7890<br />
-                                info@mysite.com
+                                CHUYÊN GIA
                             </p>
+                        </div>
+                        <div class="team-member">
+                            <img src="assets/images/agreement.png" alt="agreement" />
+                            <h3>20+</h3>
+                            <p class="contact">
+                                LĨNH VỰC NGÀNH NGHỀ
+                            </p>
+
                         </div>
                     </div>
                 </div>
@@ -220,15 +220,15 @@
         <!-- contact form -->
         <section class="contact-section parallax" id="section-contact">
             <div class="contact-overlay"></div>
-            <div class="container">
-                <div class="contact-left">
-                    <h2 class="contact-title fade-in" style="color: #ffffff;">
+            <div class="container row">
+                <div class="contact-left col-md-5">
+                    <h2 class="contact-title fade-in" style="color: #ffffff; margin-top: 100px;">
                         LIÊN HỆ<br />
                         VỚI<br />
                         CHÚNG TÔI
                     </h2>
                 </div>
-                <div class="contact-right fade-in">
+                <div class="contact-right fade-in col-md-7">
                     <h3 class="sub-contact-title" style="color: #ffffff;"><strong>TRỤ SỞ CHÍNH</strong></h3>
                     <p>
                         P 204 Tòa nhà B Licogi13, Đường Khuất Duy Tiến, Thanh Xuân, Hà Nội<br />
@@ -247,12 +247,14 @@
                                 <div class="form-group form-contact-group">
                                     <label for="firstName">Tên *</label>
                                     <input type="text" id="firstName" name="firstName" placeholder="" required />
+                                    <div class="error-message"></div>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-group form-contact-group">
                                     <label for="lastName">Họ *</label>
                                     <input type="text" id="lastName" name="lastName" placeholder="" required />
+                                    <div class="error-message"></div>
                                 </div>
                             </div>
                         </div>
@@ -260,16 +262,18 @@
                             <label for="email">Email *</label>
 
                             <input type="email" id="email" name="email" placeholder="" required />
+                            <div class="error-message"></div>
                         </div>
                         <div class="form-group form-contact-group">
                             <label for="subject">Tiêu đề *</label>
 
                             <input type="text" id="subject" name="subject" placeholder="" required />
+                            <div class="error-message"></div>
                         </div>
                         <div class="form-group form-contact-group">
                             <label for="message">Nội dung *</label>
-
                             <textarea id="message" name="message" placeholder="" required></textarea>
+                            <div class="error-message"></div>
                         </div>
                         <button type="submit" form="contactForm" value="Submit">Gửi thông tin</button>
                     </form>
@@ -349,6 +353,21 @@
                 </div>
             </div>
         </footer>
+        <!--button contact vr -->
+        <div class="sms-facebook style-for-position-br">
+            <div class="phonering-alo-alo">
+                <a href="tel:0913532448" rel="nofollow" class="phonering-alo-event">.</a>
+            </div>
+            <div class="phonering-alo-zalo">
+                <a href="https://zalo.me/0913532448" target="_blank" rel="nofollow" class="phonering-zalo-event">.</a>
+            </div>
+            <div class="phonering-alo-email">
+                <a href="mailto:luatcm@gmail.com" rel="nofollow" class="phonering-email-event">.</a>
+            </div>
+            <div class="phonering-alo-facebook">
+                <a href="https://web.facebook.com/CMLAWonline" target="_blank" rel="nofollow" class="phonering-facebook-event">.</a>
+            </div>
+        </div>
         <script src="assets/js/site-effect.js"></script>
     </body>
 </html>
