--- a/index.html
+++ b/index.html
@@ -9,16 +9,11 @@
         <meta name="description" content="Van phong Luat su CMLaw" />
         <meta name="keywords" content="cmlaw, luat, luat su, c&m, luat cm" />
 
-
-
-
-
-                <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
         <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i,600|Montserrat:200,300,400" rel="stylesheet" />
         <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.css" />
+        <link rel="stylesheet" href="assets/js/bootstrap.min.js" />
         <link rel="stylesheet" href="assets/fonts/ionicons/css/ionicons.min.css" />
         <link rel="stylesheet" href="assets/fonts/law-icons/font/flaticon.css" />
         <link href="https://fonts.googleapis.com/css?family=Merriweather:400,900,900i" rel="stylesheet" />
@@ -54,15 +49,17 @@
         </div>
 
         <!-- Navbar -->
-        <!-- <nav class="navbar navbar-expand-lg navbar-dark pb_navbar pb_scrolled-light" id="pb-navbar">
+        <nav class="navbar navbar-expand-lg navbar-dark pb_navbar pb_scrolled-light" id="pb-navbar">
             <div class="container">
                 <a class="navbar-brand" href="https://cmlaw.vn">
                     <img src="https://cmlaw.vn/themes/echula/images/logo.png" alt="C&M Lawfirm Logo" style="height: 40px; margin-right: 8px;" />
                     CMLAW
                 </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#probootstrap-navbar" aria-controls="probootstrap-navbar" aria-expanded="false" aria-label="Toggle navigation">
-                    <span><i class="ion-navicon"></i></span>
+
+                <<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#probootstrap-navbar" aria-controls="probootstrap-navbar" aria-expanded="false" aria-label="Toggle navigation">
+                <span><i class="ion-navicon"></i></span>
                 </button>
+
                 <div class="collapse navbar-collapse" id="probootstrap-navbar">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
@@ -92,37 +89,7 @@
                     </ul>
                 </div>
             </div>
-        </nav> -->
-        <nav class="navbar navbar-expand-lg navbar-dark pb_navbar pb_scrolled-light" id="pb-navbar">
-  <div class="container">
-    <a class="navbar-brand" href="https://cmlaw.vn">
-      <img src="https://cmlaw.vn/themes/echula/images/logo.png" 
-           alt="C&M Lawfirm Logo" 
-           style="height: 40px; margin-right: 8px;" />
-      CMLAW
-    </a>
-
-    <!-- Toggle button (hamburger) -->
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#probootstrap-navbar"
-      aria-controls="probootstrap-navbar" aria-expanded="false" aria-label="Toggle navigation">
-      <span><i class="ion-navicon"></i></span>
-    </button>
-
-    <!-- Collapsible content -->
-    <div class="collapse navbar-collapse" id="probootstrap-navbar">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item"><a class="nav-link text-uppercase" href="#home-section-area">Trang chủ</a></li>
-        <li class="nav-item"><a class="nav-link text-uppercase" href="#practice-area">Giới thiệu</a></li>
-        <li class="nav-item"><a class="nav-link text-uppercase" href="#our-vision-area">Dịch vụ</a></li>
-        <li class="nav-item"><a class="nav-link text-uppercase" href="#">Tin tức</a></li>
-        <li class="nav-item"><a class="nav-link text-uppercase" href="#">Biểu mẫu</a></li>
-        <li class="nav-item"><a class="nav-link text-uppercase" href="#">Văn bản</a></li>
-        <li class="nav-item"><a class="nav-link text-uppercase" href="#">Tuyển dụng</a></li>
-        <li class="nav-item"><a class="nav-link text-uppercase" href="#section-contact">Liên hệ</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+        </nav>
         <!-- Hero Section -->
         <section class="hero-section parallax" id="hero-section-area">
             <div class="container-fluid container-hero-section">
@@ -162,28 +129,28 @@
                             <h3 class="text-uppercase"><i class="fa fa-file-o" aria-hidden="true"></i> Hợp đồng</h3>
                             <p>
                                 Chúng tôi đã tham gia trợ giúp đàm phán, thoả thuận, soạn thảo thành công hàng trăm giao dịch, Hợp đồng hợp tác, đầu tư, mua bán sáp nhập doanh nghiệp, Dự án, huy động vốn, Hợp đồng mua bán bất động sản, Hợp
-                                đồng xây dựng, chuyển giao công nghệ, Hợp đồng bảo lãnh, thế chấp, chuyển nhượng cổ phần cổ phiếu, chuyển nhượng vốn góp.……
+                                đồng xây dựng, chuyển giao công nghệ, Hợp đồng bảo lãnh, thế chấp, chuyển nhượng cổ phần cổ phiếu, chuyển nhượng vốn góp...
                             </p>
                         </div>
                         <div class="area">
                             <h3 class="text-uppercase"><i class="fa fa-balance-scale" aria-hidden="true"></i> Tranh Tụng và Tranh Chấp</h3>
                             <p>
                                 Với kỹ năng chuyên môn, khả năng đánh giá, thẩm định xuất sắc bản chất vụ việc pháp lý, các luật sư của chúng tôi đã tư vấn, hỗ trợ đàm phán thành công nhiều vụ việc khó, phức tạp liên quan đến tranh chấp nội
-                                bộ doanh nghiệp, Hợp đồng, thoả thuận, hợp tác kinh doanh, vụ việc/vụ án dân sự, đất đai, kinh doanh thương mại, phân chia tài sản, thừa kế…
+                                bộ doanh nghiệp, Hợp đồng, thoả thuận, hợp tác kinh doanh, vụ việc/vụ án dân sự, đất đai, kinh doanh thương mại, phân chia tài sản, thừa kế...
                             </p>
                         </div>
                         <div class="area">
                             <h3 class="text-uppercase"><i class="fa fa-credit-card" aria-hidden="true"></i> Tư vấn đầu tư, tài chính</h3>
                             <p>
                                 Chúng tôi đã tham gia tư vấn cho hàng trăm Dự án khác nhau từ khâu lập dự án đầu tư, cấp phép, thẩm định dự án đầu tư của nhà đầu tư trong và nước ngoài, tư vấn chính sách ưu đãi, môi trường đầu tư, trên địa
-                                bàn các tỉnh tại Việt Nam. Ngoài ra, chúng tôi còn thực hiện viêc rà soát pháp lý, đánh giá rủi ro pháp lý và các dịch vụ khác liên quan đến hoạt động đầu tư, M&A, tài chính doanh nghiệp…
+                                bàn các tỉnh tại Việt Nam. Ngoài ra, chúng tôi còn thực hiện viêc rà soát pháp lý, đánh giá rủi ro pháp lý và các dịch vụ khác liên quan đến hoạt động đầu tư, M&A, tài chính doanh nghiệp...
                             </p>
                         </div>
                         <div class="area">
                             <h3 class="text-uppercase"><i class="fa fa-home" aria-hidden="true"></i> Xây dựng - Bất động sản</h3>
                             <p>
                                 Chúng tôi đã tham gia và trợ giúp pháp lý cho doanh nghiệp trong việc phát triển dự án, kinh doanh bất động sản từ thủ tục thu hồi đất, giải phóng mặt bằng, giải quyết tranh chấp, vi phạm lĩnh vực đất đai,
-                                xây dựng, hợp tác, thủ tục xây dựng, kinh doanh bất động sản, Hợp đồng của nhà thầu xây dựng, mua bán dự án, bất động sản,giải quyết nợ khó đòi trong hoạt động xây dựng…
+                                xây dựng, hợp tác, thủ tục xây dựng, kinh doanh bất động sản, Hợp đồng của nhà thầu xây dựng, mua bán dự án, bất động sản,giải quyết nợ khó đòi trong hoạt động xây dựng...
                             </p>
                         </div>
                         <div class="area">
@@ -203,7 +170,7 @@
             <div class="container">
                 <h2 class="section-title fade-in">GIỚI THIỆU</h2>
                 <p class="fade-in">
-                    Văn phòng luật sư C & M (CMLAW) được thành lập từ năm 2006 do luật sư Trương Chí Công điều hành, qua gần 20 năm hoạt động và phát triển, chúng tôi đã xây dựng được đội ngũ luật sư, các cộng sự nhiều kinh nghiệm, năng
+                    Văn phòng luật sư C&M (CMLAW) được thành lập từ năm 2006 do luật sư Trương Chí Công điều hành, qua gần 20 năm hoạt động và phát triển, chúng tôi đã xây dựng được đội ngũ luật sư, các cộng sự nhiều kinh nghiệm, năng
                     động, tận tụy với khách hàng và đạt được nhiều thành tựu trong hoạt động trợ giúp pháp lý dài hạn cho doanh nghiệp và luật sư riêng cho gia đình với các dịch vụ pháp lý chất lượng cao. Đến nay chúng tôi đã tư vấn cho
                     hàng trăm khách hàng trong và ngoài nước, trong đó có tập đoàn, Công ty có thương hiệu và uy tín trên thị trường Việt Nam và Quốc tế.
                 </p>
@@ -248,7 +215,6 @@
                             <p class="contact">
                                 LĨNH VỰC NGÀNH NGHỀ
                             </p>
-
                         </div>
                     </div>
                 </div>
@@ -380,7 +346,7 @@
         <footer class="site-footer">
             <div class="footer-container">
                 <p>
-                    Copyright © 2012 - All Rights Reserved - 
+                    Copyright © 2012 - All Rights Reserved -
                     <a href="https://cmlaw.vn" target="_blank" style="text-decoration: underline;">cmlaw.vn</a>
                 </p>
                 <div class="social-icons">
@@ -409,9 +375,9 @@
     </body>
 </html>
 <div id="successPopup" class="popup-overlay">
-  <div class="popup-box">
-    <h2>🎉 Gửi thành công!</h2>
-    <p>Cảm ơn bạn đã liên hệ. Chúng tôi sẽ phản hồi sớm nhất.</p>
-    <button onclick="closePopup()">Đóng</button>
-  </div>
+    <div class="popup-box">
+        <h2>🎉 Gửi thành công!</h2>
+        <p>Cảm ơn bạn đã liên hệ. Chúng tôi sẽ phản hồi sớm nhất.</p>
+        <button onclick="closePopup()">Đóng</button>
+    </div>
 </div>
